--- a/exercicios/exercicio00.ipynb
+++ b/exercicios/exercicio00.ipynb
@@ -33,6 +33,120 @@
     "\n",
     "6) Com excessão da casa decimal, o valor obtido na questão 6 é igual ao obtido na questão 5? Faca a comparacão dos resultados e diga qual o tipo de variável o Python retorna como resposta."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Questão 1\n",
+    "segundo = 1\n",
+    "min = 60 * segundo\n",
+    "hora = min * 60"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3600\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Questão 2\n",
+    "segundos_por_hora = 1 * hora\n",
+    "print(segundos_por_hora)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86400\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Questão 3\n",
+    "segundos_por_dia = 24 * segundos_por_hora\n",
+    "print(segundos_por_dia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Questão 4\n",
+    "div_float = segundos_por_dia / segundos_por_hora\n",
+    "print(div_float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Questão 5\n",
+    "div_int = segundos_por_dia // segundos_por_hora\n",
+    "print(div_int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "<class 'int'>\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Questão 6\n",
+    "\n",
+    "# Rascunho\n",
+    "print( div_int == div_float )\n",
+    "print(type(div_int))\n",
+    "print(type(div_float))\n",
+    "\n",
+    "# Resposta: Possuem o mesmo valor, porém são tipos de dados diferentes."
+   ]
   }
  ],
  "metadata": {
@@ -44,14 +158,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "3.10.4 (main, Dec 19 2022, 20:24:16) [GCC 9.4.0]"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
