--- a/exercicios/exercicio02.ipynb
+++ b/exercicios/exercicio02.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -280,7 +280,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "Name: sobreviveu, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "Name: sobreviveu, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "Name: embarque, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "[314 rows x 12 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
        "852               1              1             2678  15.2458    NaN  Cherbourg  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
        "[891 rows x 4 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1258,7 @@
        "890      49.8325  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1379,7 @@
        "sim                   342       342     342     136       340          342  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,20 +1401,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "embarque\n",
+       "Cherbourg      12709.345662\n",
+       "Queenstow       2002.842913\n",
+       "Southampton     2015.306986\n",
+       "Name: tarifa, dtype: float64"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.groupby([\"embarque\"]).mean()"
+    "df.groupby([\"embarque\"])[\"tarifa\"].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "embarque\n",
+       "Cherbourg      37.0042\n",
+       "Queenstow       7.7500\n",
+       "Southampton    18.7500\n",
+       "Name: tarifa, dtype: float64"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.groupby([\"embarque\"]).median()"
+    "df.groupby([\"embarque\"])[\"tarifa\"].median()"
    ]
   },
   {
@@ -1428,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1575,7 @@
        "3                 491       491     491      12       491          491  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1689,7 @@
        "       sim           119           491       24.24"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1686,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -1763,7 +1793,7 @@
        "          sim           109         577       18.89"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
